@@ -16,6 +16,8 @@ ChangeLog
 =========
     
 2009???? - 1.23.90
+
+[-] * Fixed decoding of Samsung memory entries.
     
 20090302 - 1.23.1
 
